added the authentication token to header in booking API, added the stations list API and cleaned the documentation
